objects/Usage__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Pricing</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_Pricing__c.Service_Maintenance_Contract__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Maintenance_Contract__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_Pricing__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_per_Unit__c</fullName>
        <label>Cost per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_PO_Number__c</fullName>
        <formula>Service_Maintenance_Contract__r.PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Current_PO__c</fullName>
        <formula>IF(PO_Number__c = Current_PO_Number__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For Current PO?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Km_s__c</fullName>
        <label>Km&apos;s</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_rate__c</fullName>
        <formula>37.50 - (Km_s__c * 0.74)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number Applied</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_Date__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Category_Formula__c</fullName>
        <formula>Contract_Pricing__r.Pricing_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Category_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Category</label>
        <referenceTo>Pricing_Category__c</referenceTo>
        <relationshipLabel>Non-Standard Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Type_Text__c</fullName>
        <label>Pricing Type Text</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Margin Based</fullName>
                </value>
                <value>
                    <fullName>Markup Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_per_Unit__c</fullName>
        <label>Revenue per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Maintenance_Contract__c</fullName>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>Contract_Line_Usages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>This field is being used for the rollup summary field on the service contract.</description>
        <label>Total Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>This field identifies the number of units used at a &quot;non-standard&quot; rate.</description>
        <inlineHelpText>This field identifies the number of units used at a &quot;non-standard&quot; rate.</inlineHelpText>
        <label>Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_line_revenue__c</fullName>
        <formula>IF( ISPICKVAL(Work_Order__r.SVMXC__Group_Member__r.Sole_Trader__c,&quot;NO&quot;), Total_Revenue__c-(Total_Cost__c*1.06),Total_Revenue__c - Total_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage line margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_margin_perc__c</fullName>
        <description>Used to convert the margin percentage to a numeric value.
This is used for Slips reporting only</description>
        <formula>Usage_margin_percentage__c /1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage margin perc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_margin_percentage__c</fullName>
        <formula>IF( Revenue_per_Unit__c =0,0,(IF(Contract_Pricing__r.Apply_Payroll_Tax__c =TRUE,(Total_Revenue__c-(Total_Cost__c*1.06))/Total_Revenue__c,(Total_Revenue__c-(Total_Cost__c))/Total_Revenue__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Use_Standard_Price__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Standard Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usage</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Usage</label>
    <nameField>
        <displayFormat>US-{00000}</displayFormat>
        <label>Usage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <recordTypes>
        <fullName>Non_Standard_Usage</fullName>
        <active>true</active>
        <description>Choose this record to use a custom, or non-standard, cost and revenue for each unit on this usage.</description>
        <label>Non-Standard Usage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Usage</fullName>
        <active>true</active>
        <description>Choose this record to use the Standard Cost and Revenue from the related Pricing.</description>
        <label>Standard Usage</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Usage_after_Posted</fullName>
        <active>true</active>
        <description>This rule will not allow the user to save the Usage Object if it has been posted.</description>
        <errorConditionFormula>OR(AND(Posted__c = FALSE, PRIORVALUE(Posted__c) = TRUE), AND(PRIORVALUE(Posted__c) = TRUE, Posted__c = TRUE))</errorConditionFormula>
        <errorMessage>Cannot edit or unpost a usage record.</errorMessage>
    </validationRules>
</CustomObject>